void loop(char* str)
{
 char buf[2] = {""};
 while (1){
  for (int i = 0; i < 5; i++){
   buf[0] = str[i];
   call_sys_write(buf);
   user_delay(1000000);
  }
 }
}
